fixed bug theme settings not saving to localstorage. Fixed search-bar flicker when changing themes. Minor style changes.

--- a/ProjectVishnu/ClientApp/styles/site.css
+++ b/ProjectVishnu/ClientApp/styles/site.css
@@ -19,7 +19,7 @@ body,
   @apply block py-2 pl-3 pr-4 bg-slate-700 rounded md:bg-transparent md:p-0 !text-sky-400;
 }   
 .inactive-nav-link {
-  @apply block py-2 pl-3 pr-4 !text-white rounded hover:bg-slate-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-700 md:p-0 md:dark:hover:text-white dark:hover:bg-slate-700 md:dark:hover:bg-transparent;
+  @apply block py-2 pl-3 pr-4 !text-white rounded hover:bg-slate-600 md:hover:bg-transparent md:border-0 md:hover:text-slate-700 md:p-0 md:dark:hover:text-white dark:hover:bg-slate-700 md:dark:hover:bg-transparent;
 }
 /* Radio buttons */
 .chakra-radio__control {
@@ -31,4 +31,16 @@ select,
 #mercados-dropdown span,
 #mercados-dropdown button {
   @apply dark:!bg-slate-50 !text-slate-900;
+}
+.data-table-row {
+  @apply hover:bg-slate-200 dark:hover:bg-slate-700 cursor-pointer;
+}
+  .data-table-row td:not(:first-child) {
+    @apply !text-center;
+  }
+.data-table-header th {
+  @apply !text-sky-500;
+}
+  .data-table-header th:not(:first-child) {
+    @apply !text-sky-500 !text-center;
 }
